--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "axios": "^0.27.2",
+    "flowbite": "^1.5.1",
+    "flowbite-react": "^0.1.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2.0",
