--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.2",
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@heroicons/react": "^1.0.6",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -16,6 +17,7 @@
     "axios": "^0.27.2",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
+    "joi-browser": "^13.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2.0",
@@ -49,6 +51,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "miragejs": "^0.1.45",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
   }
