--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "axios": "^0.27.2",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
+    "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
+    "joi-password-complexity": "^5.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2.0",
