--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
+    "@sentry/react": "^7.10.0",
+    "@sentry/tracing": "^7.10.0",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,11 +22,13 @@
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^5.1.0",
+    "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
     "web-vitals": "^2.1.4"
   },
