--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^5.1.0",
+    "prop-types": "^15.8.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
+    "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
