--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^5.1.0",
+    "jwt-decode": "^3.1.2",
     "prop-types": "^15.8.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
@@ -32,7 +33,8 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5"
   },
   "scripts": {
     "start": "react-scripts start",
