--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^10.4.8",
+    "cypress": "^10.6.0",
     "miragejs": "^0.1.45",
     "postcss": "^8.4.14",
     "tailwindcss": "^3.1.7"
