--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
+    "recharts": "^2.1.13",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
