--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "axios": "^0.27.2",
+    "d3": "^7.6.1",
+    "d3-collection": "^1.0.7",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
     "joi": "^17.6.0",
