--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "ag-charts-community": "^6.1.0",
+    "ag-charts-react": "^6.1.0",
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "axios": "^0.27.2",
@@ -30,9 +32,11 @@
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
+    "react-loading-overlay": "^1.0.1",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "react-toastify": "^9.0.8",
     "react-tooltip": "^4.2.21",
     "recharts": "^2.1.13",
