--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
+    "@react-pdf/renderer": "^2.3.0",
     "@sentry/react": "^7.10.0",
     "@sentry/tracing": "^7.10.0",
     "@testing-library/jest-dom": "^5.16.4",
