--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^5.1.0",
     "jwt-decode": "^3.1.2",
+    "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
