--- a/.github/workflows/cypress.js.yml
+++ b/.github/workflows/cypress.js.yml
@@ -15,6 +15,8 @@ jobs:
         with:
           build: npm run build
           start: npm start
+          wait-on: "http://localhost:3000"
+          wait-on-timeout: 120
           record: true
         env:
           CYPRESS_RECORD_KEY: ${{ secrets.CYPRESS_RECORD_KEY }}
