Removed certs from scripts

--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "secure-start": "export HTTPS=true&&SSL_CRT_FILE=../certs/server.cert&&SSL_KEY_FILE=../certs/server.key react-scripts start",
+    "secure-start": "HTTPS=true npm start",
     "build": "react-scripts build",
     "test-react": "react-scripts test",
     "test": "npx cypress run",
