--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "caspre.io",
   "version": "0.1.1",
+  "homepage": "https://caspre.io",
   "private": true,
   "dependencies": {
     "@amcharts/amcharts4": "^4.10.26",
