--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@heroicons/react": "^1.0.6",
-    "@react-pdf/renderer": "^2.3.0",
+    "@react-pdf/renderer": "^3.0.0",
     "@sentry/react": "^7.10.0",
     "@sentry/tracing": "^7.10.0",
     "@testing-library/jest-dom": "^5.16.4",
@@ -23,11 +23,14 @@
     "axios": "^0.27.2",
     "d3": "^7.6.1",
     "d3-collection": "^1.0.7",
+    "date-fns": "^2.29.2",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
     "joi": "^17.6.0",
     "joi-browser": "^13.4.0",
     "joi-password-complexity": "^5.1.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "prop-types": "^15.8.1",
@@ -36,6 +39,7 @@
     "react-avatar": "^5.0.3",
     "react-dom": "^18.2.0",
     "react-loading-overlay": "^1.0.1",
+    "react-pdf": "^5.7.2",
     "react-router-dom": "5.2.0",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
