--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "jspdf-autotable": "^3.5.25",
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "prop-types": "^15.8.1",
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
