--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "ag-grid-community": "^28.1.0",
     "ag-grid-react": "^28.1.0",
     "axios": "^0.27.2",
+    "chart.js": "^3.9.1",
     "d3": "^7.6.1",
     "d3-collection": "^1.0.7",
     "date-fns": "^2.29.2",
+    "faker": "5.5.3",
     "flowbite": "^1.5.1",
     "flowbite-react": "^0.1.5",
     "joi": "^17.6.0",
@@ -38,6 +40,7 @@
     "raven-js": "^3.27.2",
     "react": "^18.2.0",
     "react-avatar": "^5.0.3",
+    "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-loading-overlay": "^1.0.1",
     "react-pdf": "^5.7.2",
