--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-  "cSpell.words": ["newdata", "predictedpage", "toastify"]
+  "cSpell.words": ["mediumblue", "newdata", "predictedpage", "toastify"]
 }
