Feat: improved landing page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,9 @@
 {
-  "cSpell.words": ["mediumblue", "newdata", "predictedpage", "toastify"]
+  "cSpell.words": [
+    "mediumblue",
+    "newdata",
+    "predictedpage",
+    "subwhite",
+    "toastify"
+  ]
 }
