--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-avatar": "^5.0.3",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-joyride": "^2.5.3",
     "react-loading-overlay": "^1.0.1",
     "react-pdf": "^5.7.2",
     "react-router-dom": "5.2.0",
