--- a/.env.development
+++ b/.env.development
@@ -1,3 +1,3 @@
-REACT_APP_SERVER_URL="http://51.15.249.106:1288"
+REACT_APP_SERVER_URL="http://caspre.io:1288"
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
