--- a/.env.production
+++ b/.env.production
@@ -1,3 +1,4 @@
 REACT_APP_SERVER_URL="http://caspre.io:1288"
+REACT_APP_LOG_URL="http://51.15.249.106:9999"
 REACT_APP_VERSION=$npm_package_version
 REACT_APP_NAME=$npm_package_name
