--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -7,6 +7,6 @@ pipelines:
         caches:
           - node
         script:
-          - npm install
+          - npm install --legacy-peer-deps
           - npm run build
           - npm run test-react
