--- a/amplify.yml
+++ b/amplify.yml
@@ -1,12 +1,14 @@
+image: node:16
 version: 1
 frontend:
   phases:
     preBuild:
       commands:
-        - npm ci
+        - npm ci --legacy-peer-deps
     build:
       commands:
         - npm run build
+        - npm run test-react
   artifacts:
     baseDirectory: build
     files:
