--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -3,10 +3,22 @@ image: node:16
 pipelines:
   default:
     - step:
-        name: Build and Test
+        name: Build and test
         caches:
           - node
         script:
           - npm install --legacy-peer-deps
+          - npm test
           - npm run build
-          - npm run test-react
+        artifacts:
+          - build/**
+    - step:
+        name: Deploy artifacts using SCP to PROD
+        deployment: production
+        script:
+          - pipe: atlassian/scp-deploy:0.3.3
+            variables:
+              USER: collins
+              SERVER: caspre.io
+              REMOTE_PATH: "/var/www/scp-deploy/caspre/"
+              LOCAL_PATH: "build/*"
