--- a/bitbucket-pipelines.yml
+++ b/bitbucket-pipelines.yml
@@ -8,7 +8,7 @@ pipelines:
           - node
         script:
           - npm install --legacy-peer-deps
-          - npm test
+          - npm run test-react
           - npm run build
         artifacts:
           - build/**
